# leopard-transport-app

./: .env.example  .gitignore  AGENTS.md  LEOPARD - KẾT NỐI VẬN TẢI HÀNG HÓA TRỌNG TẢI LỚN.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  bidding.py  dashboard.py  drivers.py  eta.py  notifications.py  users.py  (+6 more)
backend/app/core/: celery_app.py  database.py  firebase.py  openweather.py  redis.py  security.py  vietmap.py
backend/app/models/: __init__.py  base.py  business.py  driver.py  eta.py  notification.py  order.py  payment.py  tracking.py  trip.py  user.py  vehicle.py  vrp.py
backend/app/repositories/: base_repo.py  driver_repo.py  order_repo.py  payment_repo.py  tracking_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  bid.py  dashboard.py  driver.py  eta.py  notification.py  order.py  payment.py  tracking.py  user.py  vehicle.py  vrp.py
backend/app/services/: auth_service.py  document_service.py  eta_service.py  notification_service.py  order_service.py  payment_service.py  pricing_service.py  tracking_service.py  user_service.py  vrp_service.py
backend/app/workers/: eta_worker.py  gps_archiver.py  notification_worker.py  vrp_worker.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py  test_eta.py  test_orders.py  test_payments.py  test_pricing.py  test_tracking.py  test_vrp.py
(+30 files in other folders)
